change built-in function name from get_sub_group_size to get_max_sub_group_size

Fix bug at https://bugs.freedesktop.org/show_bug.cgi?id=93469

The fucntion is mapped to OP_SIMD_SIZE which returns the constant
SIMD width, the correct function name is get_max_sub_group_size.

contributor: Georg Kolling <georg.kolling@gmail.com>
Signed-off-by: Guo Yejun <yejun.guo@intel.com>
Reviewed-by: Yang Rong <rong.r.yang@intel.com>